--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- /header ///////////////////////////////////-->
     <div class="header-parent">
         <div class="header">
-             <img class="header-img" src="images/images.jpg" alt="logo" draggable="false"/>
+             <img class="header-img" src="images/ddd.jpg" alt="logo" draggable="false"/>
              <ul class="header-ul"> 
              <li class="header-item"> <a class="header-link header-home" href="#"> Home</a></li>
              <span class="home-underline"></span>
